--- a/app/src/main/res/layout/fragment_user_card.xml
+++ b/app/src/main/res/layout/fragment_user_card.xml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout>
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.og.rentatestapp.view_model.UserViewModel" />
+            type="com.og.testapp.view_model.UserCardViewModel" />
     </data>
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".view.UserCardFragment">
 
         <ImageView
-            android:id="@+id/user_avatar_image_view"
-            android:layout_width="match_parent"
+            android:id="@+id/avatar_image_view"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/user_avatar" />
-
-        <TextView
-            android:id="@+id/last_name_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@{viewModel.lastName}" />
 
         <TextView
             android:id="@+id/first_name_text_view"
@@ -35,10 +29,19 @@
             android:text="@{viewModel.firstName}" />
 
         <TextView
+            android:id="@+id/last_name_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@{viewModel.lastName}" />
+
+        <TextView
             android:id="@+id/email_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@{viewModel.email}" />
+
+
     </LinearLayout>
 </layout>
